[gd_scene load_steps=4 format=3 uid="uid://cnlyn6tv4cbxp"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_herx1"]
[ext_resource type="Texture2D" uid="uid://cx140467lxe6p" path="res://art/chars/tinfoil_hatman_colored.png" id="2_4yf38"]
[ext_resource type="Texture2D" uid="uid://dixpesqmv5wlg" path="res://art/chars/taube.png" id="3_xwijb"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -39.0
offset_top = -60.0
offset_right = -39.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_herx1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 570.0
offset_top = 282.0
offset_right = 633.0
offset_bottom = 383.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Play"

[node name="credits" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Credits"

[node name="quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Quit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="MarginContainer"]

[node name="TinfoilHatmanColored" type="Sprite2D" parent="."]
position = Vector2(289, 414)
scale = Vector2(0.709651, 0.709651)
texture = ExtResource("2_4yf38")

[node name="Taube" type="Sprite2D" parent="."]
position = Vector2(1058, 434)
texture = ExtResource("3_xwijb")
flip_h = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/credits" to="." method="_on_credits_pressed"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/quit" to="." method="_on_quit_button_up"]
